--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 #formatter {
 	border: 1px solid rgb(169, 169, 169);
 	box-shadow: inset 0 1px 1px #ccc;
+	background-color: white;
 	border-radius: 3px;
 	margin-bottom: 10px;
 	width: 500px;
